2006-02-28  Manish Singh  <yosh@gimp.org>

	Merged from HEAD branch:

	* app/base/cpu-accel.c
	* app/composite/gimp-composite-3dnow.h
	* app/composite/gimp-composite-mmx.h
	* app/composite/gimp-composite-sse.h
	* app/composite/gimp-composite-sse2.h: check for __PIC__ in addition
	to PIC.

2006-02-27  Sven Neumann  <sven@gimp.org>

	* data/images/gimp-splash.png: back to the original 2.2 splash.

2006-02-27  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/bmp/bmpwrite.c: properly round the resolution entry.
	Fixes bug #332501.

2006-02-22  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/vectors/gimpvectors-import.c: fix the import of svg circles.

2006-02-16  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/unsharp.c: applied patch from Stephane Chauveau
	that corrects the calculation of the tile cache size (bug #331344).

2006-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c (render_frame): applied patch
	from Michael Schumacher that fixes a potential crash in the
	plug-in (bug #328919).

2006-02-14  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/winicon/icoload.c
	* plug-ins/winicon/icosave.c: applied patches from Felix Pahl.
	Fixes incorrect bit shifts that caused scrambled transparency
	(bug #330692).

2006-02-14  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/gauss.c (gauss): apply multiply_alpha() on the
	source buffer, not the destination (bug #331051, spotted by
	Stephane Chauveau).

2006-02-13  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/config/gimpguiconfig.c: make the internal help browser the
	default for all platforms (bug #329888).

2006-02-01  Matt Wilson  <msw@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/compressor.c (run): file_{gz,bz2}_save takes 5
	parameters, not 4.  Correct the nparams check in non-interactive
	mode.


2006-01-31  Sven Neumann  <sven@gimp.org>
