@@ -1,3 +1,11 @@
+2006-03-02  Sven Neumann  <sven.gimp.org>
+
+	Merged from HEAD branch (bug #310426):
+
+	* plug-ins/common/psd.c: fixed bug in resolution loading.
+
+	* plug-ins/common/psd_save.c: save resolution in PSD file.
+
 2006-02-28  Manish Singh  <yosh@gimp.org>
 
 	Merged from HEAD branch:
